# catalog-web-scraper

./: Dockerfile  Makefile  README.md  flask_webpage.py  init_db.sh  kicker.py  pyproject.toml  scraper.py  tables.sql
templates/: books.html  home.html
